$Id$

2014-07-16  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Iomega (0x059b:0x047a)
	- USB: WD My Passport: Merge entries
	- USB: WD My Passport USB 3.0 (0x1058:0x074a, 0x1058:0x0820)
	- USB: ADATA (0x125f:0xa[13]1a)
	- USB: JMicron JMS539 (0x152d:0x0539): New FW supports SAT (ticket #338)
	- USB: TrekStor Datastation (0x1e68:0x0050) (Red Hat Bugzilla 954162)

2014-07-13  Christian Franke  <franke@computer.org>

	atacmds.cpp: Add missing const and initialization.
	Don't print extra '\n' if self-test log is empty.
	ataprint.cpp: Add new ACS-4 log.
	cciss.cpp: Fix C++11 builds on Linux.  GCC and CLang do not
	predefine 'linux' when in '-std=c++11' mode.
	smartd.cpp: Update description of Windows smartd service.
	README: Update license info.  Remove outdated ATA references.

2014-07-10  Christian Franke  <franke@computer.org>

	Makefile.am: Rework build of Solaris specific man pages.
	This fixes some bogus and some missing replacements.
	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Minor typo and syntax
	fixes.

2014-07-09  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Avoid '.SH' macros with no
	argument.  Remove colons from section names.
	Merge sections CONTRIBUTORS and CREDITS with AUTHORS.
	Update SEE ALSO sections.

2014-07-05  Christian Franke  <franke@computer.org>

	configure.ac: Remove snprintf() compile time test.
	Add '--with-working-snprintf' configure option.
	Add __USE_MINGW_ANSI_STDIO test for MinGW GCC.
	utility.cpp: Add snprintf() runtime test.
	Add GCC version to output of -V option.
	Makefile.am: Add update-smart-drivedb.1m for Solaris.

2014-06-30  Christian Franke  <franke@computer.org>

	configure.ac: Update macros as suggested by 'autoconf --warnings=obsolete'.
	Makefile.am: Add creation of empty directories to install targets.

2014-06-29  Christian Franke  <franke@computer.org>

	configure.ac, Makefile.am, smartd.cpp, smartd_warning.sh.in: